# Tutorial_Adventure

./: .gitignore  CMakeLists.txt  README.md
docs/: Tutorial Adventure Design Document.docx
shaders/: compile.bat  player.frag  player.vert  playerFrag.spv  playerVert.spv  shader.frag  staticTile.vert  staticTileFrag.spv  staticTileVert.spv
src/Tutorial_Adventure/: CMakeLists.txt  Camera.cpp  Camera.h  Character.h  DamageTypes.h  DescManager.cpp  DescManager.h  Enemies.cpp  Enemies.h  Game.cpp  Game.h  Items.cpp  Items.h  Model.cpp  Model.h  Object.h  Player.cpp  Player.h  Renderer3D.cpp  Renderer3D.h  RessourcePointerDefs.h  Scene.cpp  Scene.h  SceneRessourceManager.h  Settings.h  Texture.cpp  Texture.h  Tile.h  Vertex.cpp  Vertex.h  main.cpp
src/Tutorial_Adventure/Input/: Input.cpp  Input.h  KeyCodes.h
utils/: Tutorial Adventure Cellmap Generation.py
